--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <div id ="Container">
+            <div id="cabecera">Cabecera</div>
             <div id="Post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas
