--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
         <div id ="Container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog de maestro</span>
             </div>
             <div id="Post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
@@ -23,6 +23,7 @@
                     y tus ideas. Mucho mas que ir a conferencias o salir en
                     youtube. Excepto si eres un Rockstar. Pero estadisticamente no
                     lo eres... por ahora.</p>
+                    <p>Suscribete y dale like</p>
             </div>
         </div>
     </body>
