Color de fondo, logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,12 +5,12 @@
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <title>Bienvenido a Hyperblog 2.0</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
-        <link rel='stylesheet' type='text/css' media='screen' href='css/estilos.css'>
-        <script src='main.js'></script>
+        <link rel='stylesheet' href='css/estilos.css'>
     </head>
     <body>
         <div id ="Container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png" />
                 Hyperblog
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
