Agregue una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -19,6 +19,7 @@
                 <p>Y este es el párrafo de inicio donde vamos a explicar las cosas
                     increíbles que se pueden hacer con ramas
                 </p>
+                <p><img src="imagenes/Foto.jpg" width="100%"></p>
                 <p>Los blogs son la mejor forma de compartir informacion 
                     y tus ideas. Mucho mas que ir a conferencias o salir en
                     youtube. Excepto si eres un Rockstar. Pero estadisticamente no
